--- a/src/components/ListaLivros/StyledCard.css
+++ b/src/components/ListaLivros/StyledCard.css
@@ -12,7 +12,6 @@
   align-items: center;
   max-width: 1200px;
   flex-wrap: wrap;
-  z-index: 1;
 }
 
 .container .card {
@@ -22,7 +21,7 @@
   margin: 30px;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
-  background: rgba(9, 77, 86, 0.838);
+  background: #1e8fff2c;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -38,7 +37,6 @@
 .container .card .content h4 {
   font-size: 1.8em;
   color: #fff;
-  z-index: 1;
 }
 .container .card .content h5 {
   font-size: 1em;
