--- a/src/components/ListaLivros/StyledCard.css
+++ b/src/components/ListaLivros/StyledCard.css
@@ -21,7 +21,7 @@
   margin: 30px;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
-  background: #1e8fff2c;
+  background: #087ff7;
   overflow: hidden;
   display: flex;
   justify-content: center;
