style: adicionar style no projeto

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+* {
+  font-family: 'Raleway', sans-serif;
+}
+
 body {
   background-image: url("./../public/images/biblioteca.png");
   background-repeat: no-repeat;
+  margin: 0;
 }
